--- a/assets/email_template.html
+++ b/assets/email_template.html
@@ -4,7 +4,7 @@
 <body>
 <div style="font-family: Helvetica, Arial, sans-serif; padding: 30px; max-width: 800px; margin: 0 auto;">
 
-<img src="cid:ngipipelinelogo">
+<img src="cid:ngichipseqlogo">
 
 <h1>NGI-ChIPseq: ChIP-Seq Best Practice v${version}</h1>
 <h2>Run Name: $runName</h2>
