Update version to 1.0; Add option for building BWA index for larger ref

--- a/assets/email_template.html
+++ b/assets/email_template.html
@@ -38,7 +38,7 @@
     </tbody>
 </table>
 
-<p>nf-core/chipseq is a bioinformatics best-practice analysis pipeline used for ChIP-sequencing data at the National Genomics Infastructure at SciLifeLab Stockholm, Sweden.</p>
+<p>nf-core/chipseq is a bioinformatics best-practice analysis pipeline used for ChIP-sequencing data. It is developed at the National Genomics Infastructure at SciLifeLab Stockholm, Sweden.</p>
 <p>The pipeline uses Nextflow, a bioinformatics workflow tool. It pre-processes raw data from FastQ inputs, aligns the reads and performs extensive quality-control on the results.</p>
 <p>For more information, please see the pipeline homepage: <a href="https://github.com/nf-core/chipseq">https://github.com/nf-core/chipseq</a></p>
 
