--- a/assets/email_template.html
+++ b/assets/email_template.html
@@ -5,11 +5,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <meta name="description" content="nf-core/chipseq: ChIP-seq analysis using BWA and MACS2 with QC steps.">
+  <meta name="description" content="nf-core/chipseq: Nextflow ChIP-Seq analysis pipeline, part of the nf-core community.">
   <title>nf-core/chipseq Pipeline Report</title>
 </head>
 <body>
 <div style="font-family: Helvetica, Arial, sans-serif; padding: 30px; max-width: 800px; margin: 0 auto;">
+
+<img src="cid:nfcorechipseqlogo">
 
 <h1>nf-core/chipseq v${version}</h1>
 <h2>Run Name: $runName</h2>
