--- a/assets/email_template.html
+++ b/assets/email_template.html
@@ -11,7 +11,7 @@
 <body>
 <div style="font-family: Helvetica, Arial, sans-serif; padding: 30px; max-width: 800px; margin: 0 auto;">
 
-<img src="cid:nfcorechipseqlogo">
+<img src="cid:nfcorepipelinelogo">
 
 <h1>nf-core/chipseq v${version}</h1>
 <h2>Run Name: $runName</h2>
